<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.satyadara.dscuserinterface.MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center_horizontal"
        android:text="@string/title"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Default Edit Text -->
    <EditText
        android:id="@+id/edDefault"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/hint_value"
        android:singleLine="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <!-- Material Edit Text  -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/edMaterial_Layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edDefault">

        <EditText
            android:id="@+id/edMaterial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_value_material"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edMaterial_Layout">

        <RadioButton
            android:id="@+id/radioBtnA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_a" />

        <RadioButton
            android:id="@+id/radioBtnB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_b" />
    </RadioGroup>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:entries="@array/spinner_array"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <Button
            android:id="@+id/buttonClear"
            android:layout_columnWeight="1"
            android:onClick="onClearClicked"
            android:text="@string/clear"
            android:theme="@style/PrimaryButton" />

        <Button
            android:id="@+id/buttonSubmit"
            android:layout_columnWeight="1"
            android:onClick="onSubmitClicked"
            android:text="@string/submit"
            android:theme="@style/PrimaryButton" />
    </GridLayout>

</android.support.constraint.ConstraintLayout>
